[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reactive-md"
version = "0.1.0"
description = "Reactive molecular dynamics framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "jax",
    "jax-md",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

mace = [
    "mace-torch",
]

[project.scripts]
reactive-md = "reactive_md.main:cli"
